--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: Kalyan Reddy 
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: Analyst | Architect
 
 # --- Navigation bar options --- #
 
