--- a/_config.yml
+++ b/_config.yml
@@ -73,9 +73,9 @@ author:
 social-network-links:
   rss: true
   email: "dkalyanreddy@gmail.com"
-  facebook: daattali
-  github: daattali
-  twitter: daattali
+  facebook: dkalyanreddy
+  github: dkalyanreddy
+  twitter: dkalyanreddy
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  linkedin: daattali
